# structs

./: .gitignore  .gitmodules  BUILD  CMakeLists.txt  LICENSE  WORKSPACE
java/src/: BUILD
java/src/io/structs/: CompletableToListenableFutureWrapper.java  FutureAdapters.java
javatest/: BUILD
javatest/io/structs/: .gitignore  CassandraJavaTest.java
scripts/: format.sh  protoc.sh  run_gen.sh
scripts/bazel/: deps.yaml  generate_deps.sh
structs/: structs.pb.cc  structs.pb.h  structs.proto
structs/base/: BUILD  base_plugin.cc  base_plugin.h  code_builder.cc  code_builder.h  utils.cc  utils.h
structs/bigquery/: bigquery.pb.cc  bigquery.pb.h  bigquery.proto  bigquery_plugin.cc  bigquery_plugin.h  protoc_gen_structs_bigquery_schema.cc
structs/cassandra/: BUILD  cassandra.pb.cc  cassandra.pb.h  cassandra.proto  cassandra_internal.pb.cc  cassandra_internal.pb.h  cassandra_internal.proto  cassandra_plugin.cc  cassandra_plugin.h  field_gen.cc  field_gen.h  message_gen.cc  message_gen.h  protoc_gen_structs_cassandra.cc  protoc_gen_structs_cassandra_java.cc  protoc_gen_structs_cassandra_spark_java.cc  protoc_gen_structs_cassandra_table.cc  protoc_gen_structs_cassandra_test.cc
structs/cassandra/renderers/: cql_file.cc  cql_file.h  java_file.cc  java_file.h  java_helpers.cc  java_helpers.h  spark_java_file.cc  spark_java_file.h
structs/cassandra/testdata/structs/testdata/: base_structs_test.cassandra.pbtext  base_structs_test.proto  fields_structs_test.cassandra.pbtext  fields_structs_test.proto
structs/proto/: inner_container.java.pbtext  most_basic.java.pbtext  testing.proto  testing_message.java.pbtext
structs/sugar/: sugar.h
structs/templates/: env.cc  env.h  java_file.h
tables/structs/testing/: table_inner_containers.cql  table_most_basics.cql  table_testing_messages.cql
tools/: bazel.rc
